# yanindeb

./: .gitignore  CNAME  README.md  bun.lockb  devbox.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
posts/: -2 wth, i love semantics.md  1 hello blog + …the recipe didn’t have to be real?.md  1 …the recipe didn’t have to be real?.md  14 lottie lottie lottie.md  2 wth, i love semantics.md  3 additional challenges: to do or not to do?.md  4 whuh?.md  5 VIVA LA WEBASSEMBLY!.md  5 viva la webassembly.md  6 addendums addendums addendums.md  7 ...all hail the dom?.md  8 but MUST we use jquery.md
public/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  index.html  style.css  style.tailwind.css
src/: template.html  yanindeb.py
