[tool.poetry]
name = "yanindeb"
version = "1.0.0"
description = "y(et )an(other )in(teractive )de(velopment )b(log)"
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.0"
mypy = "^1.6.1"
marko = "^2.0.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
